@@ -2,23 +2,26 @@ package star.tratto.util.javaparser;
 
 import com.github.javaparser.JavaParser;
 import com.github.javaparser.ParserConfiguration;
+import com.github.javaparser.ParseResult;
+import com.github.javaparser.ast.body.AnnotationDeclaration;
 import com.github.javaparser.ast.nodeTypes.NodeWithSimpleName;
 import com.github.javaparser.ast.AccessSpecifier;
 import com.github.javaparser.ast.CompilationUnit;
+import com.github.javaparser.ast.Modifier;
 import com.github.javaparser.ast.Node;
 import com.github.javaparser.ast.NodeList;
 import com.github.javaparser.ast.PackageDeclaration;
 import com.github.javaparser.ast.body.BodyDeclaration;
 import com.github.javaparser.ast.body.CallableDeclaration;
 import com.github.javaparser.ast.body.ClassOrInterfaceDeclaration;
-import com.github.javaparser.ast.body.ConstructorDeclaration;
+import com.github.javaparser.ast.body.EnumDeclaration;
 import com.github.javaparser.ast.body.FieldDeclaration;
 import com.github.javaparser.ast.body.MethodDeclaration;
 import com.github.javaparser.ast.body.Parameter;
 import com.github.javaparser.ast.body.TypeDeclaration;
 import com.github.javaparser.ast.body.VariableDeclarator;
 import com.github.javaparser.ast.stmt.BlockStmt;
-import com.github.javaparser.ast.type.Type;
+import com.github.javaparser.ast.type.ReferenceType;
 import com.github.javaparser.ast.type.TypeParameter;
 import com.github.javaparser.resolution.MethodUsage;
 import com.github.javaparser.resolution.TypeSolver;
@@ -61,11 +64,16 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
+import static org.plumelib.util.CollectionsPlume.mapList;
 import static star.tratto.util.JavaTypes.isAssignableToNumeric;
+import static star.tratto.util.StringUtils.containsWord;
 import static star.tratto.util.StringUtils.fullyQualifiedClassName;
 
+/**
+ * This class provides static methods for JavaParser
+ * utilities.
+ */
 public class JavaParserUtils {
     private static final Logger logger = LoggerFactory.getLogger(JavaParserUtils.class);
     private static final String ROOT = "src/main/resources/projects-packaged";
@@ -78,16 +86,10 @@ public class JavaParserUtils {
     private static final String SYNTHETIC_CLASS_SOURCE = "public class " + SYNTHETIC_CLASS_NAME + " {}";
     /** Artificial method name */
     private static final String SYNTHETIC_METHOD_NAME = "__tratto__auxiliaryMethod";
-    /**
-     * Regex to match the signature from the "toString" of either {@link ReflectionMethodDeclaration} or
-     * {@link JavassistMethodDeclaration} (both implementations of {@link ResolvedMethodDeclaration})
-     */
-    private static final Pattern METHOD_SIGNATURE = Pattern.compile(
-            "^ReflectionMethodDeclaration\\{method=((.*) )?\\S+ \\S+\\(.*\\}$|" +
-                  "^JavassistMethodDeclaration\\{ctMethod\\=.*\\[((.*) )?\\S+ \\(.*\\).*\\]}$"
-    );
-    /** Regex to match the binary name of a class (e.g. "package.submodule.InnerClass$OuterClass") */
-    private static final Pattern PACKAGE_CLASS = Pattern.compile("[a-zA-Z_][a-zA-Z\\d_]*(\\.[a-zA-Z_][a-zA-Z\\d_]*)*");
+    /** Cache ResolvedType of Object to make subsequent accesses free. */
+    private static ResolvedType objectType;
+    /** Cache Set<MethodUsage> of Object methods to make subsequent accesses free. */
+    private static Set<MethodUsage> objectMethods;
 
     /** Private constructor to avoid creating an instance of this class. */
     private JavaParserUtils() {
@@ -163,98 +165,120 @@ public class JavaParserUtils {
     }
 
     /**
-     * Gets a synthetic empty JavaParser class.
+     * Returns a new, empty JavaParser class.
      *
      * @return an empty JavaParser class
      */
-    private static TypeDeclaration<?> getSyntheticClass() {
+    private static TypeDeclaration<?> createNewClass() {
         return javaParser.parse(SYNTHETIC_CLASS_SOURCE).getResult().orElseThrow()
                 .getLocalDeclarationFromClassname(SYNTHETIC_CLASS_NAME).get(0);
     }
 
     /**
-     * Adds a synthetic empty method block to a given class.
+     * Adds a new, empty method to a given class, and returns its body.
      *
      * @param typeDeclaration the class to add a method to
-     * @return an empty JavaParser method block in the given class
+     * @return the body of the new method
      */
-    private static BlockStmt getSyntheticBlockStmt(TypeDeclaration<?> typeDeclaration) {
-        return typeDeclaration.addMethod(SYNTHETIC_METHOD_NAME).getBody().orElseThrow();
+    private static BlockStmt createNewMethodBody(TypeDeclaration<?> typeDeclaration) {
+        return typeDeclaration
+                .addMethod(SYNTHETIC_METHOD_NAME)
+                .getBody()
+                .orElseThrow();
     }
 
     /**
-     * Creates a "java.lang.Object" type.
+     * Creates a "java.lang.Object" type if it has not been previously created
+     * (see {@link #objectType}), otherwise returns the previously created type.
      *
      * @return a "java.lang.Object" type
      */
     public static ResolvedType getObjectType() {
-        TypeDeclaration<?> syntheticClass = getSyntheticClass();
-        BlockStmt syntheticMethod = getSyntheticBlockStmt(syntheticClass);
-        return syntheticMethod
-                .addStatement("java.lang.Object objectVar;")
-                .getStatements().getLast().orElseThrow()
-                .asExpressionStmt().getExpression()
-                .asVariableDeclarationExpr().getVariables().get(0)
-                .resolve().getType();
+        if (objectType == null) {
+            TypeDeclaration<?> syntheticClass = createNewClass();
+            BlockStmt syntheticMethod = createNewMethodBody(syntheticClass);
+            objectType = syntheticMethod
+                    .addStatement("java.lang.Object objectVar;")
+                    .getStatements().getLast().orElseThrow()
+                    .asExpressionStmt().getExpression()
+                    .asVariableDeclarationExpr().getVariables().get(0)
+                    .resolve().getType();
+        }
+        return objectType;
     }
 
     /**
-     * Injects a synthetic method into a class given a method under test,
-     * including:
+     * Creates a set containing all methods of "java.lang.Object" if it has not
+     * been previously created (see {@link #objectMethods}), otherwise returns
+     * the previously created set.
+     *
+     * @return a set of "java.lang.Object" methods
+     */
+    public static Set<MethodUsage> getObjectMethods() {
+        if (objectMethods == null) {
+            objectMethods = getResolvedReferenceTypeDeclaration(getObjectType()).getAllMethods();
+        }
+        return objectMethods;
+    }
+
+    /**
+     * Injects a new method declaration into a class, given an original method
+     * from the class. The statements in the NEW method include:
      * <ul>
-     *     <li>variable declaration for each method argument</li>
-     *     <li>variable declaration for return type of analyzed method</li>
-     *     <li>variable declaration (of unknown type) using given expression</li>
+     *     <li>a variable declaration for each method argument in the original
+     *     method</li>
+     *     <li>a variable declaration for the return type of the original
+     *     method</li>
+     *     <li>a variable declaration (of unknown type) using given
+     *     expression</li>
      * </ul>
      *
-     * @param jpClass the declaring class in which to insert a synthetic method
-     * @param jpCallable the method under analysis
-     * @param methodArgs tokens for arguments of {@code jpCallable}
-     * @param expression an expression to add to the synthetic method
-     * @throws ResolvedTypeNotFound if {@code jpCallable} is a constructor
+     * @param jpClass the class in which to insert the new method
+     * @param originalMethod an original method from {@code jpClass}
+     * @param methodArgs tokens for the parameters of {@code originalMethod}
+     * @param expression an expression to add to the new method
+     * @throws ResolvedTypeNotFound if {@code originalMethod} is a constructor
      */
-    private static void addSyntheticMethodWithExpression(
+    private static void addNewMethodWithExpression(
             TypeDeclaration<?> jpClass,
-            CallableDeclaration<?> jpCallable,
+            CallableDeclaration<?> originalMethod,
             List<MethodArgumentTokens> methodArgs,
             String expression
     ) throws ResolvedTypeNotFound {
         // throw error when given a constructor due to JavaParser behavior differences
-        if (jpCallable.getNameAsString().equals(jpClass.getNameAsString())) {
+        if (originalMethod.getNameAsString().equals(jpClass.getNameAsString())) {
             throw new ResolvedTypeNotFound("Unable to generate synthetic constructor for class " + jpClass.getNameAsString());
         }
         // create synthetic method
-        BlockStmt methodBody = getSyntheticBlockStmt(jpClass);
+        BlockStmt methodBody = createNewMethodBody(jpClass);
         // add method arguments as variable statements in method body (e.g. "ArgType argName;")
         for (MethodArgumentTokens methodArg : methodArgs) {
             methodBody.addStatement(methodArg.typeName() + " " + methodArg.argumentName() + ";");
         }
         // add return type (if non-void)
-        String returnType = ((MethodDeclaration) jpCallable).getType().asString();
-        if (!returnType.equals("void")) {
-            methodBody.addStatement(
-                    returnType + " methodResultID = " + jpCallable.getNameAsString() + "(" +
-                            methodArgs
-                                    .stream()
-                                    .map(MethodArgumentTokens::argumentName)
-                                    .collect(Collectors.joining(", "))
-                    + ");"
-            );
-        }
+        addMethodResultIDStatementToMethod(
+                methodBody,
+                ((MethodDeclaration) originalMethod).getType().asString(),
+                originalMethod.getNameAsString(),
+                methodArgs
+                        .stream()
+                        .map(MethodArgumentTokens::argumentName)
+                        .toList()
+        );
         // add expression
-        methodBody.addStatement("var returnType = " + expression + ";");
+        methodBody.addStatement("var expressionReturnType = " + expression + ";");
     }
 
     /**
-     * Gets the type of the given java expression. For example, given the
-     * expression, {@code Integer.MAX_VALUE - Integer.MIN_VALUE}, the method
+     * Gets the type of the given Java expression. For example, given the
+     * expression {@code Integer.MAX_VALUE - Integer.MIN_VALUE}, this method
      * returns a JavaParser representation of the type {@code int}.
      *
-     * @param jpClass the declaring class
-     * @param jpCallable the method under analysis
-     * @param methodArgs the arguments in the method under analysis
+     * @param jpClass the declaring class of {@code jpCallable}
+     * @param jpCallable a method of {@code jpClass}
+     * @param methodArgs tokens for the parameters of {@code jpCallable}
      * @param expression a Java expression
-     * @return the resolved return type of the expression
+     * @return the type of the expression
      * @throws ResolvedTypeNotFound if {@code jpClass} is not a class/interface
      * or if {@code jpCallable} is a constructor
      * @throws NoSuchElementException if an error occurs while parsing the
@@ -267,7 +291,7 @@ public class JavaParserUtils {
             String expression
     ) throws ResolvedTypeNotFound {
         if (jpClass instanceof ClassOrInterfaceDeclaration) {
-            addSyntheticMethodWithExpression(
+            addNewMethodWithExpression(
                     jpClass,
                     jpCallable,
                     methodArgs,
@@ -294,13 +318,14 @@ public class JavaParserUtils {
      * Given a syntactically valid Java expression, evaluates its return type, including package and class.
      * If the expression is not syntactically valid, the method will throw an exception.
      * @param expression the expression to evaluate, e.g., "methodResultID.negate().value(null).getField()".
-     *                   Must conform to TrattoGrammar.
+     *                   Must conform to TrattoGrammar
      * @param oracleDatapoint OracleDatapoint containing additional necessary information for resolving types,
      *                        e.g., class and method names and sources. NOTE: To handle Java expressions
-     *                        containing the token "jdVar", the oracleDatapoint must have its "oracle" field
-     *                        populated, even if it's a partial oracle (e.g., it's the oracle being currently
-     *                        generated). Then, the last occurring jdVar clause is looked for and its type is
-     *                        resolved, which will be used to resolve the type of the expression.
+     *                        containing the token "jdVar" (see {@link star.tratto.oraclegrammar.custom}), the
+     *                        oracleDatapoint must have its "oracle" field populated, even if it's a partial
+     *                        oracle (e.g., it's the oracle being currently generated). Then, the last occurring
+     *                        jdVar clause is looked for and its type is resolved, which will be used to resolve
+     *                        the type of the expression
      * @return pair of strings, where the first string is the package and the second string is the class
      */
     public static Pair<String, String> getReturnTypeOfExpression(String expression, OracleDatapoint oracleDatapoint) {
@@ -312,21 +337,24 @@ public class JavaParserUtils {
         // Generate synthetic method
         CompilationUnit cu = javaParser.parse(oracleDatapoint.getClassSourceCode()).getResult().get();
         String className = oracleDatapoint.getClassName();
-        MethodDeclaration syntheticMethod = getSyntheticMethod(
+        MethodDeclaration syntheticMethod = createSyntheticMethod(
                 getClassOrInterface(cu, className),
                 getMethodOrConstructorDeclaration(oracleDatapoint.getMethodSourceCode())
         );
         BlockStmt syntheticMethodBody = syntheticMethod.getBody().get();
 
-        // If the method is not constructor and not void, add statement to save methodResultID
+        // If the method is not a constructor and not void, add a statement to save methodResultID.
         MethodDeclaration method = getMethodDeclaration(oracleDatapoint.getMethodSourceCode());
         if (method != null) {
-            String methodName = method.getNameAsString();
-            String methodReturnType = method.getType().asString();
-            if (!"void".equals(methodReturnType)) {
-                syntheticMethodBody.addStatement(methodReturnType + " methodResultID = " + methodName +
-                        "(" + syntheticMethod.getParameters().stream().map(Parameter::getNameAsString).collect(Collectors.joining(", ")) + ");");
-            }
+            addMethodResultIDStatementToMethod(
+                    syntheticMethodBody,
+                    method.getType().asString(),
+                    method.getNameAsString(),
+                    syntheticMethod.getParameters()
+                            .stream()
+                            .map(Parameter::getNameAsString)
+                            .toList()
+            );
         }
 
         // Handle jdVar if necessary
@@ -348,11 +376,25 @@ public class JavaParserUtils {
     }
 
     /**
-     * Given the class and method under test, creates a synthetic method
-     * with the same signature (in terms of type parameters and arguments) as the method under test.
+     * Add a statement to parentMethod that saves the result of a method call to a variable.
+     * @param parentMethod the method to which the statement will be added
+     * @param methodReturnType the return type of the method to add. If "void", no statement will be added
+     * @param methodName the name of the method to add
+     * @param methodParameters the parameters of the method to add
+     */
+    private static void addMethodResultIDStatementToMethod(BlockStmt parentMethod, String methodReturnType, String methodName, List<String> methodParameters) {
+        if (!"void".equals(methodReturnType)) {
+            parentMethod.addStatement(methodReturnType + " methodResultID = " + methodName +
+                    "(" + String.join(", ", methodParameters) + ");");
+        }
+    }
+
+    /**
+     * Given a method, creates a synthetic method
+     * with the same signature (in terms of type parameters and arguments).
      * Inserts the synthetic method into the class and returns it.
      */
-    private static MethodDeclaration getSyntheticMethod(TypeDeclaration<? extends TypeDeclaration<?>> classUnderTest, BodyDeclaration<?> methodUnderTest) {
+    private static MethodDeclaration createSyntheticMethod(TypeDeclaration<? extends TypeDeclaration<?>> classUnderTest, BodyDeclaration<?> methodUnderTest) {
         MethodDeclaration syntheticMethod = classUnderTest.addMethod(SYNTHETIC_METHOD_NAME);
         syntheticMethod.setTypeParameters(getTypeParameters(methodUnderTest));
         syntheticMethod.setParameters(getParameters(methodUnderTest));
@@ -362,19 +404,31 @@ public class JavaParserUtils {
     /**
      * Pass a null oracleDatapoint to create a synthetic method without any particularities. Otherwise,
      * if the oracleDatapoint is not null, the method will be created with
-     * {@link #getSyntheticMethod(TypeDeclaration, BodyDeclaration)} (see its documentation).
+     * {@link #createSyntheticMethod(TypeDeclaration, BodyDeclaration)} (see its documentation).
      */
-    private static MethodDeclaration getSyntheticMethod(CompilationUnit cu, OracleDatapoint oracleDatapoint) {
+    private static MethodDeclaration createSyntheticMethod(CompilationUnit cu, OracleDatapoint oracleDatapoint) {
         if (oracleDatapoint != null) {
-            return getSyntheticMethod(
+            return createSyntheticMethod(
                     getClassOrInterface(cu, oracleDatapoint.getClassName()),
                     getMethodOrConstructorDeclaration(oracleDatapoint.getMethodSourceCode())
             );
         } else {
-            return getClassOrInterface(cu, SYNTHETIC_CLASS_NAME).addMethod(SYNTHETIC_METHOD_NAME);
+            TypeDeclaration<?> clazz = getClassOrInterface(cu, SYNTHETIC_CLASS_NAME);
+            return clazz.addMethod(SYNTHETIC_METHOD_NAME);
         }
     }
 
+    /**
+     * When evaluating the return type of an expression, such expression may contain the
+     * token "jdVar" (see {@link star.tratto.oraclegrammar.custom}). If so, this method
+     * adds a statement to the synthetic method where the expression is evaluated, to declare
+     * a variable "jdVar" with its type.
+     * @param syntheticMethodBody parent method where an expression will be evaluated and
+     *                            where the jdVar clause will be added if necessary
+     * @param expression the expression to evaluate, potentially containing "jdVar"
+     * @param oracleDatapoint OracleDatapoint containing additional necessary information
+     *                        to resolve the type of "jdVar"
+     */
     private static void handleJdVarIfNecessary(BlockStmt syntheticMethodBody, String expression, OracleDatapoint oracleDatapoint) {
         if (!expression.contains("jdVar")) {
             return;
@@ -400,7 +454,7 @@ public class JavaParserUtils {
 
     private static void addImports(CompilationUnit cu, String expression, OracleDatapoint oracleDatapoint) {
         oracleDatapoint.getTokensProjectClasses().forEach(projectClass -> {
-            if (expression.contains(projectClass.className())) {
+            if (containsWord(expression, projectClass.className())) {
                 cu.addImport(fullyQualifiedClassName(projectClass.packageName(), projectClass.className()));
             }
         });
@@ -443,22 +497,31 @@ public class JavaParserUtils {
         }
     }
 
+    /** Regex to match the binary name of a class (e.g. "package.submodule.InnerClass$OuterClass") */
+    private static final Pattern PACKAGE_CLASS = Pattern.compile("[a-zA-Z_][a-zA-Z\\d_]*(\\.[a-zA-Z_][a-zA-Z\\d_]*)*");
+
     /**
-     * Removes the package name from a fully qualified name of a type. Also
-     * removes package from type parameters.
+     * Removes the package name from a fully qualified name of a type for
+     * compatibility with the XText grammar. Also removes package from type
+     * parameters.
      *
      * @param fullyQualifiedName a fully qualified name of a type
      * @return the type name without packages. Includes outer classes, e.g.,
      *     package.Outer.Inner    =>    Outer.Inner
      */
     public static String getTypeWithoutPackages(String fullyQualifiedName) {
+        // regex is used instead of String.lastIndexOf to avoid removing outer classes
         Matcher matcher = PACKAGE_CLASS.matcher(fullyQualifiedName);
+        // continuously remove packages until none remain
         while (matcher.find()) {
             if (matcher.group().contains(".")) {
+                // gets the class name using a JavaParser ResolvedReferenceTypeDeclaration
+                String classNameWithoutPackages = getResolvedReferenceTypeDeclaration(matcher.group())
+                        .getClassName();
+                // replaces all instances of the fully qualified name with the JavaParser type name
                 fullyQualifiedName = fullyQualifiedName.replaceAll(
                         matcher.group(),
-                        // removes packages but keeps outer classes
-                        getResolvedReferenceTypeDeclaration(matcher.group()).getClassName()
+                        classNameWithoutPackages
                 );
             }
         }
@@ -471,15 +534,15 @@ public class JavaParserUtils {
      * type, this method returns the fully qualified name without packages.
      *
      * @param resolvedType JavaParser resolved type
-     * @return the fully qualified name of the type without packages. If the
-     * resolved type is an array of reference types, removes the packages from
-     * the fully qualified name of the component type.
+     * @return the name of a type without packages. If the resolved type is an
+     * array of reference types, then this method removes the packages from
+     * the fully qualified name of the element types.
      */
     public static String getTypeWithoutPackages(ResolvedType resolvedType) {
         String typeName = resolvedType.describe();
-        ResolvedType componentType = removeArray(resolvedType);
-        if (componentType.isReferenceType()) {
-            // we use the original type name to avoid removing arrays
+        ResolvedType elementType = getElementType(resolvedType);
+        if (elementType.isReferenceType()) {
+            // use the original type name to avoid removing array brackets
             return getTypeWithoutPackages(typeName);
         } else {
             return typeName;
@@ -487,30 +550,35 @@ public class JavaParserUtils {
     }
 
     /**
-     * Returns the {@link ResolvedReferenceTypeDeclaration} of a given binary
-     * type name.
+     * Returns the {@link ResolvedReferenceTypeDeclaration} of a given fully
+     * qualified type name.
      *
-     * @param type binary type name, e.g., {@code java.util.List}
+     * @param fqName fully qualified type name, e.g., {@code java.util.List}
      * @return the corresponding JavaParser ResolvedReferenceTypeDeclaration
      * @throws UnsolvedSymbolException if the type cannot be resolved
      * @throws UnsupportedOperationException if the type is an array or
      * primitive type
      */
-    public static ResolvedReferenceTypeDeclaration getResolvedReferenceTypeDeclaration(String type) throws UnsolvedSymbolException, UnsupportedOperationException {
-        return getResolvedType(type).asReferenceType().getTypeDeclaration().get();
+    public static ResolvedReferenceTypeDeclaration getResolvedReferenceTypeDeclaration(String fqName) throws UnsolvedSymbolException, UnsupportedOperationException {
+        return getResolvedType(fqName).asReferenceType().getTypeDeclaration().get();
     }
 
+    /**
+     * @throws UnsupportedOperationException if the type is an array or
+     * primitive type
+     */
     private static ResolvedReferenceTypeDeclaration getResolvedReferenceTypeDeclaration(ResolvedType resolvedType) throws UnsupportedOperationException {
         return resolvedType.asReferenceType().getTypeDeclaration().get();
     }
 
+    // TODO: Check that this method is not called with binary names as argument
     /**
-     * @throws UnsupportedOperationException if the type is an array or a primitive type
+     * @param fqName fully qualified name, e.g., {@code java.util.List}
      */
-    public static ResolvedType getResolvedType(String type) throws UnsupportedOperationException {
+    public static ResolvedType getResolvedType(String fqName) throws UnsupportedOperationException {
         CompilationUnit cu = javaParser.parse(SYNTHETIC_CLASS_SOURCE).getResult().get();
         BlockStmt syntheticMethodBody = getClassOrInterface(cu, SYNTHETIC_CLASS_NAME).addMethod(SYNTHETIC_METHOD_NAME).getBody().get();
-        syntheticMethodBody.addStatement(type + " type1Var;");
+        syntheticMethodBody.addStatement(fqName + " type1Var;");
         return getClassOrInterface(cu, SYNTHETIC_CLASS_NAME)
                 .getMethodsByName(SYNTHETIC_METHOD_NAME).get(0)
                 .getBody().get()
@@ -521,11 +589,16 @@ public class JavaParserUtils {
     }
 
     /**
-     * Given a fully qualified class name, returns all methods that can be called on top of that type.
-     * If the type is a regular reference type that can be resolved, retrieves applicable methods. If
+     * Given a fully qualified class name, returns all methods that can be called on that type.
+     * <ul>
+     * <li>If the type is a regular reference type that can be resolved, retrieves applicable methods.
+     * <li>If
      * the type is a reference type but cannot be resolved (e.g., a generic type), retrieves methods
-     * from java.lang.Object. If the type is an array, retrieves methods from java.lang.Object. If the
+     * from java.lang.Object.
+     * <li>If the type is an array, retrieves methods from java.lang.Object.
+     * <li>If the
      * type is a primitive, throws an IllegalArgumentException.
+     * </ul>
      * @throws IllegalArgumentException if the type is not a reference type or an array
      */
     public static Set<MethodUsage> getMethodsOfType(String referenceType) throws IllegalArgumentException {
@@ -535,23 +608,23 @@ public class JavaParserUtils {
         boolean useObjectMethods = true;
         try {
             resolvedType = getResolvedType(referenceType);
-            resolvedReferenceTypeDeclaration = getResolvedReferenceTypeDeclaration(resolvedType);
-            methods.addAll(resolvedReferenceTypeDeclaration.getAllMethods());
-            // Interfaces do not always inherit from Object
-            if (!resolvedReferenceTypeDeclaration.isInterface()) {
-                useObjectMethods = false;
-            }
-        } catch (UnsupportedOperationException e) {
-            if (!resolvedType.isArray()) {
-                throw new IllegalArgumentException("Trying to retrieve available methods from a type that is not " +
-                        "a reference type or an array: " + referenceType, e);
+            if (!resolvedType.isArray() && !resolvedType.isReferenceType()) {
+                throw new IllegalArgumentException("getMethodsOfType: not a reference type or an array: " + referenceType);
+            } else if (resolvedType.isReferenceType()) {
+                resolvedReferenceTypeDeclaration = getResolvedReferenceTypeDeclaration(resolvedType);
+                methods.addAll(resolvedReferenceTypeDeclaration.getAllMethods());
+                // Interfaces do not always inherit from Object
+                if (!resolvedReferenceTypeDeclaration.isInterface()) {
+                    useObjectMethods = false;
+                }
             }
         } catch (UnsolvedSymbolException e) {
+            // Happens mostly for type parameters, may also happen in corner cases for unknown classes
             logger.warn("Unresolvable type: {}", referenceType);
         }
         if (useObjectMethods) {
-            Set<MethodUsage> objectMethods = getResolvedReferenceTypeDeclaration("java.lang.Object").getAllMethods();
-            objectMethods.forEach(om -> {
+            // Always add object methods for arrays or types that couldn't be resolved (e.g., generics)
+            getObjectMethods().forEach(om -> {
                 if (methods.stream().noneMatch(m -> m.getName().equals(om.getName()) && m.getParamTypes().equals(om.getParamTypes()))) {
                     methods.add(om);
                 }
@@ -560,8 +633,7 @@ public class JavaParserUtils {
         return methods;
     }
 
-    /**
-     * Returns true if type1 is an instance of type2, false otherwise.
+    /** Returns true if a variable of type1 is an instance of type2, false otherwise.
      * @param type1 fully qualified type, e.g., "java.util.List"
      * @param type2 fully qualified type, e.g., "java.lang.Object"
      * @param oracleDatapoint may be null. If not null, it is used to check if some type is generic.
@@ -580,28 +652,39 @@ public class JavaParserUtils {
      *     <li>{@code isInstanceOf("Object", "String", null)} returns {@code false}</li>
      *     <li>{@code doesInstanceofCompile("String", "Object", null)} returns {@code true}</li>
      *     <li>{@code doesInstanceofCompile("Object", "String", null)} returns {@code true}</li>
+     *     <li>{@code doesInstanceofCompile("String", "Integer", null)} returns {@code false}</li>
      * </ul>
-     * In other words, this method returns true if the expression "var1 instanceof type2" would compile,
+     * In other words, this method returns true if the expression {@code var1 instanceof type2} would compile,
      * where var1 is a variable of type1.
+     * The Java compiler rejects {@code var1 instanceof type2} if type1 and type2 are unrelated in
+     * the type hierarchy.
      */
     public static boolean doesInstanceofCompile(String type1, String type2, OracleDatapoint oracleDatapoint) {
-        ResolvedType resolvedType2 = tryToGetResolvedType(type2);
+        ResolvedType resolvedType2 = getResolvedTypeOrNull(type2);
         if (resolvedType2 == null) {
-            return false; // Either type2 is generic, or an unknown class. In both cases, type1 cannot be instanceof it
+            return false; // Either type2 is generic, or an unknown class. In both cases, type1 cannot be instanceof it.
         }
         try {
-            List<String> type2TypeParameters = resolvedType2.asReferenceType().getTypeDeclaration().get().getTypeParameters()
-                    .stream().map(ResolvedTypeParameterDeclaration::getName).collect(Collectors.toList());
-            if (type2TypeParameters.contains(type1)) {
-                return true; // Special case: type1 is a generic and a type parameter of type2
+            List<String> classTypeParameters = getClassOrInterface(oracleDatapoint.getClassSourceCode(), oracleDatapoint.getClassName())
+                    .resolve().getTypeParameters().stream().map(ResolvedTypeParameterDeclaration::getName).toList();
+            if (classTypeParameters.contains(type1)) {
+                // Special case: type1 is a type parameter of the oracle datapoint class, so "type1Var instanceof type2" compiles for any type2
+                // Example: The OracleDatapoint class is Equator<T>, and type1 is T. Then, this method returns true regardless of type2.
+                return true;
             }
-        } catch (UnsupportedOperationException|NoSuchElementException|NullPointerException ignored) {}
+        } catch (UnsupportedOperationException|NoSuchElementException|NullPointerException ignored) {
+            // Previous check is only intended for special case, it may throw these exceptions for normal cases, which are handled below
+        }
         return isInstanceOf(type1, type2, oracleDatapoint, false) || isInstanceOf(type2, type1, null, false);
     }
 
     /**
-     * Auxiliary method used both by {@link #isInstanceOf(String, String, OracleDatapoint)}
-     * and {@link #doesInstanceofCompile}.
+     * This method implements the underlying logic used both to check if a variable of type1 is an
+     * instance of type2 ({@link #isInstanceOf(String, String, OracleDatapoint)}), and to check if
+     * type1 and type2 can be compared using the instanceof operator ({@link #doesInstanceofCompile}).
+     * This is an auxiliary private method to avoid code duplication, and it should ONLY be called
+     * from the two aforementioned methods. Also, depending on where it is called from, the parameter
+     * checkEquality must be true or false (see its documentation).
      * @param checkEquality if true, returns true if type1 is equal to type2. If false, this check is
      *                      not performed at all. Must be true if checking {@code isInstanceOf}.
      *                      Must be false if checking {@code doesInstanceofCompile}. This is because
@@ -617,7 +700,7 @@ public class JavaParserUtils {
         if (checkEquality && type1.equals(type2)) {
             return true;
         }
-        ResolvedType resolvedType2 = tryToGetResolvedType(type2);
+        ResolvedType resolvedType2 = getResolvedTypeOrNull(type2);
         if (resolvedType2 == null) {
             return false; // Type2 is generic or an unknown class. In both cases, type1 cannot be instanceof it
         }
@@ -634,7 +717,7 @@ public class JavaParserUtils {
 
         // Parse class that contains method under test and add synthetic method to get resolved type 1 (we already have type 2)
         CompilationUnit cu = javaParser.parse(classSourceCode).getResult().get();
-        BlockStmt syntheticMethodBody = getSyntheticMethod(cu, oracleDatapoint).getBody().get();
+        BlockStmt syntheticMethodBody = createSyntheticMethod(cu, oracleDatapoint).getBody().get();
         syntheticMethodBody.addStatement(type1 + " type1Var;");
 
         // Get result of instanceof expression
@@ -653,7 +736,7 @@ public class JavaParserUtils {
         }
     }
 
-    private static ResolvedType tryToGetResolvedType(String type2) {
+    private static ResolvedType getResolvedTypeOrNull(String type2) {
         ResolvedType resolvedType2;
         try {
             resolvedType2 = getResolvedType(type2);
@@ -663,83 +746,126 @@ public class JavaParserUtils {
         return resolvedType2;
     }
 
-    // TODO: The "not the other way around" is true only in a certain sense.  Given variables `b`
-    // and `B` of type boolean and Boolean, both "b = B" and "B = b" will compile, because Java
-    // performs automatic boxing and unboxing.  Please clarify the comment.
     /**
-     * This method is different from {@link #isInstanceOf} in that it can be used to compare
-     * primitive types and primitive wrapper types. For instance, a boolean is assignable to a Boolean,
-     * but not the other way around. Note that this method takes as input pairs of package and class
-     * name, instead of fully qualified types.
+     * This method is different from {@link #isInstanceOf(String, String, OracleDatapoint)} in that it
+     * can be used to compare primitive types and primitive wrapper types. For instance, a boolean is
+     * assignable to a Boolean, and vice versa, but this cannot be checked with the instanceof operator.
+     * Note that this method takes as input pairs of package and class name, instead of fully qualified
+     * types.
      * @param type1 pair with &lt;package, class&gt;, e.g., &lt;"java.util", "List"&gt;
      * @param type2 pair with &lt;package, class&gt;, e.g., &lt;"java.lang", "Object"&gt;
      * @param oracleDatapoint may be null. If not null, it is used to check if some type is generic.
      * @return true if a variable of type1 can be assigned to a variable of type2, false otherwise
      */
     public static boolean isType1AssignableToType2(Pair<String, String> type1, Pair<String, String> type2, OracleDatapoint oracleDatapoint) {
-        // Cases to consider:
-        // 1) left and right types are the same
-        // 2) left type is null and right type is not primitive
-        // 3) left type is primitive and right type is wrapper
-        // 4) both types are numeric and left type is assignable to right type
-        // 5) left type is instance of right type (both types are non-primitive)
-        return
-                type1.equals(type2) ||
-                (type1.equals(JavaTypes.NULL) && !JavaTypes.PRIMITIVES.contains(type2)) ||
-                (JavaTypes.PRIMITIVES.contains(type1) && JavaTypes.PRIMITIVES_TO_WRAPPERS.get(type1).equals(type2)) ||
-                (JavaTypes.NUMBERS.contains(type1) && JavaTypes.NUMBERS.contains(type2) && isAssignableToNumeric(type1, type2)) ||
-                isInstanceOf(fullyQualifiedClassName(type1), fullyQualifiedClassName(type2), oracleDatapoint);
+        if (type1.equals(type2)) {
+            // 1) left and right types are the same
+            return true;
+        }
+        if (type1.equals(JavaTypes.NULL) && !JavaTypes.PRIMITIVES.contains(type2)) {
+            // 2) left type is the null/void type and right type is not primitive
+            return true;
+        }
+        if (JavaTypes.PRIMITIVES.contains(type1) && JavaTypes.PRIMITIVES_TO_WRAPPERS.get(type1).equals(type2)) {
+            // 3) left type is primitive and right type is wrapper
+            return true;
+        }
+        if (JavaTypes.PRIMITIVES.contains(type2) && JavaTypes.PRIMITIVES_TO_WRAPPERS.get(type2).equals(type1)) {
+            // 4) right type is primitive and left type is wrapper
+            return true;
+        }
+        if (JavaTypes.NUMBERS.contains(type1) && JavaTypes.NUMBERS.contains(type2) && isAssignableToNumeric(type1, type2)) {
+            // 5) both types are numeric and left type is assignable to right type
+            return true;
+        }
+        if (isInstanceOf(fullyQualifiedClassName(type1), fullyQualifiedClassName(type2), oracleDatapoint)) {
+            // 6) left type is instance of right type (both types are non-primitive)
+            return true;
+        }
+        return false;
     }
 
     public static TypeDeclaration<?> getClassOrInterface(CompilationUnit cu, String name) {
         try {
-            return cu.getLocalDeclarationFromClassname(name).get(0);
-        } catch (NoSuchElementException|IndexOutOfBoundsException ignored) {}
-        try {
-            return cu.getClassByName(name).get();
-        } catch (NoSuchElementException ignored) {}
-        try {
-            return cu.getInterfaceByName(name).get();
-        } catch (NoSuchElementException ignored) {}
-        try {
-            return cu.getEnumByName(name).get();
-        } catch (NoSuchElementException ignored) {}
-        try {
-            return cu.getAnnotationDeclarationByName(name).get();
-        } catch (NoSuchElementException e) {
-            throw new RuntimeException("Could not find class, interface, enum or annotation '" + name + "' in compilation unit.", e);
+            List<ClassOrInterfaceDeclaration> classOrInterfaceList = cu.getLocalDeclarationFromClassname(name);
+            if (!classOrInterfaceList.isEmpty()) {
+                return classOrInterfaceList.get(0);
+            }
+        } catch (NoSuchElementException ignored) {
+            // There are other alternatives to retrieve class, interface, etc., as below
         }
+        Optional<ClassOrInterfaceDeclaration> classOrInterface = cu.getClassByName(name);
+        if (classOrInterface.isPresent()) {
+            return classOrInterface.get();
+        }
+        Optional<ClassOrInterfaceDeclaration> interface0 = cu.getInterfaceByName(name);
+        if (interface0.isPresent()) {
+            return interface0.get();
+        }
+        Optional<EnumDeclaration> enum0 = cu.getEnumByName(name);
+        if (enum0.isPresent()) {
+            return enum0.get();
+        }
+        Optional<AnnotationDeclaration> annotation = cu.getAnnotationDeclarationByName(name);
+        if (annotation.isPresent()) {
+            return annotation.get();
+        }
+        throw new RuntimeException("Could not find class, interface, enum or annotation '" + name + "' in compilation unit.");
     }
 
     public static TypeDeclaration<?> getClassOrInterface(String classSourceCode, String name) {
-        return getClassOrInterface(javaParser.parse(classSourceCode).getResult().get(), name);
+        CompilationUnit cu = javaParser.parse(classSourceCode).getResult().get();
+        return getClassOrInterface(cu, name);
     }
 
     /**
-     * Returns the String variable declaration represented by a JavaParser
-     * VariableDeclarator.
+     * Returns the String variable declaration(s) represented by a JavaParser
+     * VariableDeclarator. Recall that a JavaParser field declaration may
+     * declare multiple variables. Each variable is separated into individual
+     * declarations.
      *
-     * @param field the JavaParser field declaration
+     * @param field the JavaParser field declaration. The parent field is
+     *              necessary, as a {@link VariableDeclarator} does not store
+     *              modifier information.
      * @param variable the JavaParser variable declaration
      * @return a string representation of the declaration of {@code variable}.
      * The declaration follows the format:
      *  "(modifiers) (type) (name)( = initial value);"
      */
     public static String getVariableDeclaration(FieldDeclaration field, VariableDeclarator variable) {
-        return (String.join("", field.getModifiers().stream().map(Node::toString).toList()) +
+        return (String.join("", mapList(Node::toString, field.getModifiers())) +
                 variable.getTypeAsString() + " " +
                 variable.getNameAsString() +
                 (variable.getInitializer().isPresent()
                         ? " = " + variable.getInitializer().get()
                         : "") +
-                ";").trim();
+                ";");
+    }
+
+    /**
+     * Gets the String field declaration represented by a JavaParser
+     * {@link ResolvedFieldDeclaration}, but without the modifiers.
+     *
+     * @param resolvedField a field declaration
+     * @return a string representation of the declaration. The declaration
+     * follows the format:
+     *  "(type) (name);"
+     */
+    private static String getFieldDeclarationWithoutModifiers(
+            ResolvedFieldDeclaration resolvedField
+    ) {
+        return
+                getTypeWithoutPackages(resolvedField.getType()) + " " +
+                resolvedField.getName() +
+                ";";
     }
 
     /**
      * Returns the String field declaration represented by a JavaParser
-     * {@link ResolvedFieldDeclaration}.
+     * {@link ResolvedFieldDeclaration} as it would appear in source code.
+     * Package names are removed for compatibility with the XText grammar.
      *
-     * @param resolvedField a resolved field declaration
+     * @param resolvedField a field declaration
      * @return a string representation of the declaration of
      * {@code resolvedField}. The declaration follows the format:
      *  "(access-specifier) (static) (type) (name);"
@@ -747,21 +873,22 @@ public class JavaParserUtils {
     public static String getFieldDeclaration(
             ResolvedFieldDeclaration resolvedField
     ) {
-        boolean hasAccessSpecifier = !resolvedField.accessSpecifier().asString().equals("");
+        String accessSpecifier = resolvedField.accessSpecifier().asString();
+        if (!accessSpecifier.equals("")) {
+            accessSpecifier += " ";
+        }
         boolean isStatic = resolvedField.isStatic();
-        return ((hasAccessSpecifier ? resolvedField.accessSpecifier().asString() + " " : "") +
-                (isStatic ? "static " : "") +
-                getTypeWithoutPackages(resolvedField.getType().describe()) + " " +
-                resolvedField.getName() +
-                ";");
+        return accessSpecifier +
+               (isStatic ? "static " : "") +
+               getFieldDeclarationWithoutModifiers(resolvedField);
     }
 
     /**
      * Gets the String field declaration represented by a JavaParser
-     * {@link ResolvedFieldDeclaration}. Uses a given modifier value to
-     * determine the modifiers.
+     * {@link ResolvedFieldDeclaration}. Package names are removed for
+     * compatibility with the XText grammar.
      *
-     * @param resolvedField resolved field declaration
+     * @param resolvedField a field declaration
      * @param modifier an integer representing the field modifiers
      * @return a string representation of the declaration. The declaration
      * follows the format:
@@ -771,10 +898,8 @@ public class JavaParserUtils {
             ResolvedFieldDeclaration resolvedField,
             int modifier
     ) {
-        return ((modifier == 0) ? "" : (java.lang.reflect.Modifier.toString(modifier) + " ") +
-                getTypeWithoutPackages(resolvedField.getType()) + " " +
-                resolvedField.getName() +
-                ";").trim();
+        return ((modifier == 0) ? "" : (java.lang.reflect.Modifier.toString(modifier) + " ")) +
+               getFieldDeclarationWithoutModifiers(resolvedField);
     }
 
     /**
@@ -790,26 +915,49 @@ public class JavaParserUtils {
     public static String getCallableSignature(
             CallableDeclaration<?> jpCallable
     ) {
-        // get method source as a string
-        String methodSignature = jpCallable.toString();
-        Optional<BlockStmt> methodBody = jpCallable instanceof MethodDeclaration ?
-                ((MethodDeclaration) jpCallable).getBody() :
-                Optional.ofNullable(((ConstructorDeclaration) jpCallable).getBody());
-        // remove method body
-        if (methodBody.isPresent()) {
-            methodSignature = methodSignature.replace(methodBody.get().toString(), "");
+        StringBuilder sb = new StringBuilder();
+        // add modifiers
+        List<String> modifiers = jpCallable.getModifiers()
+                .stream()
+                .map(Modifier::toString)
+                .toList();
+        sb.append(String.join("", modifiers));
+        // add type parameters
+        List<String> typeParameters = jpCallable.getTypeParameters()
+                .stream()
+                .map(TypeParameter::toString)
+                .toList();
+        if (!typeParameters.isEmpty()) {
+            sb.append("<")
+                    .append(String.join(", ", typeParameters))
+                    .append(">")
+                    .append(" ");
         }
-        // remove all comments
-        for (Node comment: jpCallable.getAllContainedComments()) {
-            methodSignature = methodSignature.replace(comment.toString(), "");
+        // add return type (if not a constructor)
+        if (jpCallable.isMethodDeclaration()) {
+            sb.append(jpCallable.asMethodDeclaration().getType())
+                    .append(" ");
         }
-        // remove Javadoc comment
-        if (jpCallable.getComment().isPresent()) {
-            methodSignature = methodSignature.replaceAll("[\\s\\S]*\n", "");
+        // add method name
+        sb.append(jpCallable.getNameAsString());
+        // add formal parameters
+        List<String> parameters = jpCallable.getParameters()
+                .stream()
+                .map(Parameter::toString)
+                .toList();
+        sb.append("(")
+                .append(String.join(", ", parameters))
+                .append(")");
+        // add exceptions
+        List<String> exceptions = jpCallable.getThrownExceptions()
+                .stream()
+                .map(ReferenceType::asString)
+                .toList();
+        if (!exceptions.isEmpty()) {
+            sb.append(" throws ")
+                    .append(String.join(", ", exceptions));
         }
-        // remove special characters
-        methodSignature = methodSignature.replaceAll("/\\*\\*([\\s\\S]*?)\\*/(\\n|\\r|\\t)*", "");
-        return methodSignature.trim().replaceAll(";$", "");
+        return sb.toString().replaceAll(" +", " ").trim();
     }
 
     /**
@@ -836,7 +984,7 @@ public class JavaParserUtils {
     }
 
     /**
-     * Gets all type parameters of a given method.
+     * Gets all type parameters of a given method as declared in source code.
      */
     private static List<String> getTypeParameters(MethodUsage methodUsage) {
         return methodUsage.getDeclaration().getTypeParameters()
@@ -846,7 +994,10 @@ public class JavaParserUtils {
     }
 
     /**
-     * Gets all formal parameters in the method definition.
+     * Gets all formal parameters in the method definition. This method
+     * returns the type of each parameter, followed by an artificial name. For
+     * example,
+     *     "MethodUsage[get(int i)]"    -&gt;    "List.of("int arg1")"
      */
     private static List<String> getParameters(MethodUsage methodUsage) {
         ResolvedMethodDeclaration methodDeclaration = methodUsage.getDeclaration();
@@ -859,20 +1010,59 @@ public class JavaParserUtils {
     }
 
     /**
-     * Gets all exceptions that can be thrown by a given method.
+     * Gets the simple names of all exceptions that can be thrown by a given
+     * method.
      */
     private static List<String> getExceptions(MethodUsage methodUsage) {
-        return methodUsage.getDeclaration().getSpecifiedExceptions()
-                .stream()
-                .map(JavaParserUtils::getTypeWithoutPackages)
-                .toList();
+        List<ResolvedType> exceptions = methodUsage.getDeclaration().getSpecifiedExceptions();
+        return mapList(JavaParserUtils::getTypeWithoutPackages, exceptions);
+    }
+
+    /** Regex to match {@link ReflectionMethodDeclaration#toString()}. */
+    private static final Pattern REFLECTION_METHOD_DECLARATION = Pattern.compile(
+            "^ReflectionMethodDeclaration\\{method=((.*) )?\\S+ \\S+\\(.*}$"
+    );
+
+    /** Regex to match {@link JavassistMethodDeclaration#toString()}. */
+    private static final Pattern JAVASSIST_METHOD_DECLARATION = Pattern.compile(
+            "^JavassistMethodDeclaration\\{ctMethod=.*\\[((.*) )?\\S+ \\(.*\\).*]}$"
+    );
+
+    /**
+     * Gets the modifiers of a JavaParser MethodUsage. Unfortunately, the
+     * implementations of ResolvedMethodDeclaration have different approaches
+     * for storing modifier information. This method uses regexes to handle
+     * retrieving this information from {@link ReflectionMethodDeclaration} or
+     * {@link JavassistMethodDeclaration} implementations of
+     * ResolvedMethodDeclaration.
+     *
+     * @param methodDeclaration a resolved method declaration. Must be either
+     *                          {@link ReflectionMethodDeclaration} or
+     *                          {@link JavassistMethodDeclaration}.
+     * @return the modifiers of the method
+     */
+    private static String getMethodModifiers(ResolvedMethodDeclaration methodDeclaration) {
+        Matcher reflectionMatcher = REFLECTION_METHOD_DECLARATION.matcher(methodDeclaration.toString());
+        Matcher javassistMatcher = JAVASSIST_METHOD_DECLARATION.matcher(methodDeclaration.toString());
+        if (!reflectionMatcher.find() && !javassistMatcher.find()) {
+            throw new IllegalStateException("Could not parse method signature: " + methodDeclaration);
+        }
+        String methodModifiers;
+        if (methodDeclaration instanceof ReflectionMethodDeclaration) {
+            methodModifiers = reflectionMatcher.group(1);
+        } else {
+            methodModifiers = javassistMatcher.group(1);
+        }
+        if (methodModifiers == null) {
+            methodModifiers = "";
+        }
+        return methodModifiers;
     }
 
     /**
-     * Gets the method signature from a JavaParser MethodUsage and its
-     * corresponding ResolvedMethodDeclaration. Unfortunately, depending on
-     * the implementation of the ResolvedMethodDeclaration, it is not possible
-     * to recover specific features, such as:
+     * Gets the method signature from a JavaParser MethodUsage. Unfortunately,
+     * depending on the implementation of the ResolvedMethodDeclaration, it is
+     * not possible to recover specific features, such as:
      * <ul>
      *     <li>Modifiers</li>
      *     <li>Annotations</li>
@@ -883,6 +1073,8 @@ public class JavaParserUtils {
      * ReflectionMethodDeclaration, and JavassistMethodDeclaration. A
      * signature follows the format:
      *     "[modifiers] [typeParameters] [type] [methodName]([parameters]) throws [exceptions]"
+     * All type names do not use package names for compatibility with the
+     * XText grammar.
      */
     public static String getMethodSignature(
             MethodUsage methodUsage
@@ -893,16 +1085,7 @@ public class JavaParserUtils {
             MethodDeclaration jpMethod = jpMethodDeclaration.getWrappedNode();
             return getMethodSignature(jpMethod);
         }
-        // Consider ReflectionMethodDeclaration or JavassistMethodDeclaration
-        Matcher matcher = METHOD_SIGNATURE.matcher(methodDeclaration.toString());
-        if (!matcher.find()) {
-            throw new IllegalStateException("Could not parse method signature: " + methodDeclaration);
-        }
-        String methodModifiers = methodDeclaration instanceof ReflectionMethodDeclaration ? matcher.group(1) : matcher.group(2);
-        // Take into account the case in which the method declaration refers to a method without an access specifier.
-        if (methodModifiers == null) {
-            methodModifiers = "";
-        }
+        String methodModifiers = getMethodModifiers(methodDeclaration);
         List<String> typeParameterList = getTypeParameters(methodUsage);
         List<String> formalParameterList = getParameters(methodUsage);
         List<String> exceptionList = getExceptions(methodUsage);
@@ -928,22 +1111,20 @@ public class JavaParserUtils {
     ) throws PackageDeclarationNotFoundException {
         Optional<PackageDeclaration> jpPackage = cu.getPackageDeclaration();
         if (jpPackage.isEmpty()) {
-            throw new PackageDeclarationNotFoundException(
-                    "The JavaParser package declaration of the compilation unit is empty"
-            );
+            throw new PackageDeclarationNotFoundException("The compilation unit has no package declaration");
         }
         return jpPackage.get();
     }
 
     /**
-     * Returns the base component type of a resolved type. Recursively strips
-     * all array variables. For example:
+     * Returns the element of a resolved type. Recursively strips all array
+     * variables. For example:
      *     Object[][] => Object
      *
      * @param resolvedType a type
-     * @return the base component type
+     * @return the element type
      */
-    public static ResolvedType removeArray(ResolvedType resolvedType) {
+    public static ResolvedType getElementType(ResolvedType resolvedType) {
         while (resolvedType.isArray()) {
             resolvedType = resolvedType.asArrayType().getComponentType();
         }
@@ -951,53 +1132,51 @@ public class JavaParserUtils {
     }
 
     /**
-     * Checks if a type is a type parameter.
+     * Checks if a type is a type variable.
      *
      * @param resolvedType a JavaParser resolved type
-     * @return true iff a given type is a type parameter of a generic class or
-     * method. If the given type is an array, then this method checks the base
-     * component type.
+     * @return true iff a given type is a type variable of a generic class or
+     * method. If the given type is an array, then this method checks the
+     * element type.
      */
-    public static boolean isTypeParameter(
+    public static boolean isTypeVariable(
             ResolvedType resolvedType
     ) {
-        ResolvedType componentType = removeArray(resolvedType);
-        return componentType.isTypeVariable();
+        ResolvedType elementType = getElementType(resolvedType);
+        return elementType.isTypeVariable();
     }
 
     /**
-     * Checks if a type name represents a type parameter. A type parameter may
-     * be declared in either the class or method signature. This method checks
-     * both the class where the type is found and its declaring class to
-     * determine if the type is a type parameter.
+     * Checks if a type name represents a type variable declared in the given
+     * class or method. This method checks both the method where the type is
+     * used and its declaring class.
      *
      * @param typeName a type name
      * @param jpCallable the method using {@code typeName}
      * @param jpClass the declaring class of {@code jpCallable}
-     * @return true iff a given type is a type parameter of a generic class or
-     * method. If the given type is an array, then this method checks the base
-     * component type.
+     * @return true iff a given type is a type variable of the declaring class
+     * or method. If the given type is an array, then this method checks the
+     * element type.
      */
-    public static boolean isTypeParameter(
+    public static boolean isTypeVariable(
             String typeName,
             CallableDeclaration<?> jpCallable,
             TypeDeclaration<?> jpClass
     ) {
-        // add all type parameters of the method
-        List<String> typeParameterNames = jpCallable.getTypeParameters()
-                .stream()
-                .map(NodeWithSimpleName::getNameAsString)
-                .collect(Collectors.toList());
-        // add all type parameters of the class
-        if (jpClass instanceof ClassOrInterfaceDeclaration) {
-            typeParameterNames.addAll(
-                    jpClass.asClassOrInterfaceDeclaration().getTypeParameters()
-                            .stream()
-                            .map(NodeWithSimpleName::getNameAsString)
-                            .toList()
-            );
+        String elementType = typeName.replaceAll("\\[]", "");
+        for (TypeParameter typeParameter : jpCallable.getTypeParameters()) {
+            if (typeParameter.getNameAsString().equals(elementType)) {
+                return true;
+            }
         }
-        return typeParameterNames.contains(typeName.replaceAll("\\[]", ""));
+        if (jpClass instanceof ClassOrInterfaceDeclaration) {
+            for (TypeParameter typeParameter : jpClass.asClassOrInterfaceDeclaration().getTypeParameters()) {
+                if (typeParameter.getNameAsString().equals(elementType)) {
+                    return true;
+                }
+            }
+        }
+        return false;
     }
 
     /**
@@ -1009,42 +1188,43 @@ public class JavaParserUtils {
      * @throws JPClassNotFoundException if {@code typeDeclaration} is not
      * resolvable
      */
-    public static List<MethodUsage> getMethodsOfType(
+    public static List<MethodUsage> getAllMethods(
             TypeDeclaration<?> typeDeclaration
     ) throws JPClassNotFoundException {
         try {
             return new ArrayList<>(typeDeclaration.resolve().getAllMethods());
         } catch (UnsolvedSymbolException | IllegalArgumentException e) {
             String errMsg = String.format(
-                    "Impossible to get all the methods of the class %s.%n%s.",
+                    "Unable to get all the methods of the class %s.%n%s.",
                     typeDeclaration.getNameAsString(), e
             );
             logger.error(errMsg);
-            throw new JPClassNotFoundException(errMsg);
+            throw new JPClassNotFoundException(errMsg, e);
         }
     }
 
     /**
-     * Get all fields available to a given class (including those defined in
-     * superclasses).
+     * Get all fields available (non-private) to a given class instance
+     * (including those defined in superclasses). This method only considers
+     * an instance of a class, such that private fields are not accessible.
      *
      * @param typeDeclaration object class
      * @return list of ResolvedFieldDeclaration objects
      * @throws JPClassNotFoundException if {@code typeDeclaration} is not
      * resolvable
      */
-    public static List<ResolvedFieldDeclaration> getFieldsOfType(
+    public static List<ResolvedFieldDeclaration> getAllFields(
             TypeDeclaration<?> typeDeclaration
     ) throws JPClassNotFoundException {
         try {
             return typeDeclaration.resolve().getAllFields();
         } catch (UnsolvedSymbolException | IllegalArgumentException e) {
             String errMsg = String.format(
-                    "Impossible to get all the methods of class %s.%n%s.",
+                    "Unable to get all the methods of class %s.%n%s.",
                     typeDeclaration.getNameAsString(), e
             );
             logger.error(errMsg);
-            throw new JPClassNotFoundException(errMsg);
+            throw new JPClassNotFoundException(errMsg, e);
         }
     }
 
@@ -1064,20 +1244,37 @@ public class JavaParserUtils {
         }
     }
 
+    /**
+     * Checks if a method is non-private and non-void.
+     *
+     * @param methodUsage a method
+     * @return true iff the method is non-private and non-void
+     */
     private static boolean isNonPrivateNonVoidMethod(MethodUsage methodUsage) {
-        return !methodUsage.getDeclaration().getReturnType().isVoid() && !methodUsage.getDeclaration().accessSpecifier().equals(AccessSpecifier.PRIVATE);
+        return !methodUsage.getDeclaration().getReturnType().isVoid() &&
+                !methodUsage.getDeclaration().accessSpecifier().equals(AccessSpecifier.PRIVATE);
     }
 
+    /**
+     * Checks if an attribute is non-private and non-static. An attribute
+     * is defined as any class field.
+     *
+     * @param fieldDeclaration a class attribute
+     * @return true iff the attribute is non-private and non-static
+     */
     public static boolean isNonPrivateNonStaticAttribute(ResolvedFieldDeclaration fieldDeclaration) {
-        return !fieldDeclaration.accessSpecifier().equals(AccessSpecifier.PRIVATE) && !fieldDeclaration.isStatic();
+        return !fieldDeclaration.accessSpecifier().equals(AccessSpecifier.PRIVATE) &&
+                !fieldDeclaration.isStatic();
     }
 
     public static boolean isNonPrivateStaticNonVoidMethod(MethodUsage methodUsage) {
-        return methodUsage.getDeclaration().isStatic() && isNonPrivateNonVoidMethod(methodUsage);
+        return methodUsage.getDeclaration().isStatic() &&
+                isNonPrivateNonVoidMethod(methodUsage);
     }
 
     public static boolean isNonPrivateNonStaticNonVoidMethod(MethodUsage methodUsage) {
-        return !methodUsage.getDeclaration().isStatic() && isNonPrivateNonVoidMethod(methodUsage);
+        return !methodUsage.getDeclaration().isStatic() &&
+                isNonPrivateNonVoidMethod(methodUsage);
     }
 
     /**
@@ -1085,15 +1282,22 @@ public class JavaParserUtils {
      * need the constructor declaration for anything, if the passed methodSourceCode is from a constructor,
      * this method returns null. This behavior must be handled by the caller.
      * @return null if the passed method source code is actually a constructor
-     * @throws IllegalArgumentException if the provided methodSourceCode cannot be parsed by JavaParser
+     * @throws IllegalArgumentException if the provided methodSourceCode cannot be parsed by JavaParser or
+     * if it is not a constructor or method
      */
     public static MethodDeclaration getMethodDeclaration(String methodSourceCode) throws IllegalArgumentException {
-        try {
-            return javaParser.parseBodyDeclaration(methodSourceCode).getResult().get().asMethodDeclaration();
-        } catch (NoSuchElementException e) {
-            throw new IllegalArgumentException("JavaParser cannot parse:" + System.lineSeparator() + methodSourceCode, e);
-        } catch (IllegalStateException e) {
-            return null; // This happens when the methodSourceCode is actually a constructor
+        Optional<BodyDeclaration<?>> parseResult = javaParser.parseBodyDeclaration(methodSourceCode).getResult();
+        if (parseResult.isPresent()) {
+            BodyDeclaration<?> bodyDeclaration = parseResult.get();
+            if (bodyDeclaration.isMethodDeclaration()) {
+                return bodyDeclaration.asMethodDeclaration();
+            } else if (bodyDeclaration.isConstructorDeclaration()) {
+                return null;
+            } else {
+                throw new IllegalArgumentException("Not a constructor or method:" + System.lineSeparator() + methodSourceCode);
+            }
+        } else {
+            throw new IllegalArgumentException("JavaParser cannot parse:" + System.lineSeparator() + methodSourceCode);
         }
     }
 
